2007-10-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	* src/MultiUrlRequestInfo.h: Updated the message shown when program
	stops and there are any unfinished or in-progress downloads.
	Added the legend of "stat".
	
2007-10-12  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Throw exception when chunck checksum verification fails.
	* src/DownloadCommand.cc (validatePieceHash): New function.
	* src/PiecedSegment.{h, cc} (clear): New function.
	* src/GrowSegment.{h, cc} (clear): New function.
	* src/Segment.h (clear): New function.
	* src/SegmentMan.{h, cc} (validatePieceHash): Removed.
	* test/SegmentTest.cc
	* test/GrowSegmentTest.cc

2007-10-12  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Do not send referer when redirected.
	* src/Request.cc (redirectUrl)
	* test/RequestTest.cc
	* test/HttpRequestTest.cc

2007-10-12  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Implemented BitTorrent/http/ftp integrated download.
	I've rewritten lots of files and now some headers have forward
	class declarations to reduce compile time.
	The implementation is extremely alpha stage, I recommend to use this
	for testing purpose only.

2007-09-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed the compilation error on 64bit platform.
	* test/HttpHeaderProcessorTest.cc

2007-09-12  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Merged Ross's patch that fixes compilation problem in MinGW
	* test/DefaultBtProgressInfoFileTest.cc

2007-09-09  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Updated fr.po by sebone
	* po/fr.po

	Updated man page.
	* doc/aria2c.1.txt
	
	* Release 0.11.3
	
2007-09-05  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	* src/MetalinkRequestInfo.cc (execute): Fixed BitTorrent download
	failure in Metalink.

2007-09-03  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Automatically save *.aria2 control file of http/ftp download in every
	60 seconds.
	* src/AutoSaveCommand.{h, cc}: New class.