@@ -1,3 +1,7 @@
+2007-10-15  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
+	* src/Request.cc (parseUrl): Removed unnecessary slashes around dir.
+
 2007-10-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
 	* src/MultiUrlRequestInfo.h: Updated the message shown when program
